fix: handle empty node list in guest relocation
- Add safety checks to Calculations.get_most_free_node to prevent ValueError
  when no target nodes are available (e.g., all nodes in maintenance).
- Update Calculations.relocate_guests to gracefully handle cases where
  no suitable target node is found.
- Add unit tests for get_most_free_node edge cases.

Ref: #24

--- a/.changelogs/1.1.12/420_fix_psi_based_balancing_key_error.yml
+++ b/.changelogs/1.1.12/420_fix_psi_based_balancing_key_error.yml
@@ -1,2 +1,3 @@
 fixed:
   - Fix PSI based balancing which resulted in a Python KeyError (@gyptazy). [#420]
+  - Fix empty list of possible target nodes for balancing resulting in a Python KeyError (@archandha). [#24]
